@@ -12,6 +12,9 @@
 #' (not for \code{MultipleGroupClass} objects)
 #' @param degrees the degrees argument to be used if there are exactly two factors. See \code{\link{iteminfo}}
 #' for more detail
+#' @param CE logical; plot confidence envelope?
+#' @param CEalpha area remaining in the tail for confidence envolope. Default gives 95% confidence region 
+#' @param CEdraws draws number of draws to use for confidence envelope
 #' @param ... additional arguments to be passed to lattice 
 #' @author Phil Chalmers \email{rphilip.chalmers@@gmail.com}
 #' @keywords plot
@@ -21,23 +24,32 @@
 #' 
 #' data(LSAT7)
 #' fulldata <- expand.table(LSAT7)
-#' mod1 <- mirt(fulldata,1)
+#' mod1 <- mirt(fulldata,1,SE=TRUE)
 #' mod2 <- mirt(fulldata,1, itemtype = '1PL')
 #' mod3 <- mirt(fulldata,2)
 #' 
 #' itemplot(mod1, 2)
+#' itemplot(mod1, 2, CE = TRUE)
 #' itemplot(mod1, 2, type = 'info')
+#' itemplot(mod1, 2, type = 'info', CE = TRUE)
 #' 
 #' mods <- list(twoPL = mod1, onePL = mod2)
 #' itemplot(mods, 1, type = 'RE')
 #' 
+#' #multidimensional info
 #' itemplot(mod3, 3, type = 'info')
 #' 
+#' #polytomous items
+#' pmod <- mirt(Science, 1, SE=TRUE)
+#' itemplot(pmod, 3)
+#' itemplot(pmod, 3, CE = TRUE)
 #' 
 #'     }
 #' 
-itemplot <- function(object, item, type = 'trace', degrees = 45, ...){
-    ret <- itemplot.internal(object=object, item=item, type=type, degrees=degrees, ...)
+itemplot <- function(object, item, type = 'trace', degrees = 45, CE = FALSE, CEalpha = .05, 
+                     CEdraws = 1000, ...){
+    ret <- itemplot.internal(object=object, item=item, type=type, degrees=degrees, CE=CE, 
+                             CEalpha=CEalpha, CEdraws=CEdraws, ...)
     if(is.null(ret)) return(invisible(ret))
     else return(ret)
 }
